# undo-cli-core

./: .gitignore  README.md  function.properties  pyproject.toml  requirements-dev.txt  requirements.txt  root.txt  setup.py
secrets/: TEST_PASSWORD
tests/: assert_utils.py  test_command_database.py  test_command_database_create.py  test_command_database_init.py  test_command_database_misc.py  test_command_database_release.py  test_command_frontend.py  test_command_frontend_misc.py  test_command_function.py  test_command_function_misc.py  test_command_function_wrapper.py  test_command_secret.py  test_command_secret_encrypt.py  test_command_secret_misc.py  test_helper_function_wrapper_route_parser.py  test_template_function_wrapper.py  test_utils_container_utils.py  test_utils_dir_utils.py  test_utils_echo_utils.py  test_utils_secret_utils.py  test_utils_test_utils.py
tests/testdata/: python-handler-sample.py  python-simple-code.py
tests/testproject/.vault/: db_init_password_admin  db_password  db_secret  db_secret_alt  vault-pass.sh  vault-pass.txt
tests/testproject/database/: db_initialise.sql
undo/: __init__.py  __main__.py  cli.py
undo/commands/core/: version.py
undo/commands/database/: database.py  database_arguments.py  database_create.py  database_init.py  database_misc.py  database_release.py
undo/commands/docs/: docs.py
undo/commands/frontend/: frontend.py  frontend_arguments.py  frontend_misc.py
undo/utils/: command_utils.py  const.py  container_utils.py  dir_utils.py  echo_utils.py  secret_utils.py  test_utils.py
(+27 files in other folders)
